ci(docs): generate documentation with jazzy for version 0.1.1

--- a/development/code-documentation/develop/Classes/ViewController.html
+++ b/development/code-documentation/develop/Classes/ViewController.html
@@ -80,6 +80,61 @@ layout: jazzy
               <li class="item">
                 <div>
                   <code>
+                  <a name="/s:22FlyveMDMAdminDashboard14ViewControllerC05setupD0yyF"></a>
+                  <a name="//apple_ref/swift/Method/setupView()" class="dashAnchor"></a>
+                  <a class="token" href="#/s:22FlyveMDMAdminDashboard14ViewControllerC05setupD0yyF">setupView()</a>
+                  </code>
+                </div>
+                <div class="height-container">
+                  <div class="pointer-container"></div>
+                  <section class="section">
+                    <div class="pointer"></div>
+                    <div class="abstract">
+                      <p>Undocumented</p>
+
+                    </div>
+                    <div class="declaration">
+                      <h4>Declaration</h4>
+                      <div class="language">
+                        <p class="aside-title">Swift</p>
+                        <pre class="highlight swift"><code><span class="kd">func</span> <span class="nf">setupView</span><span class="p">()</span></code></pre>
+
+                      </div>
+                    </div>
+                  </section>
+                </div>
+              </li>
+              <li class="item">
+                <div>
+                  <code>
+                  <a name="/c:@M@FlyveMDMAdminDashboard@objc(cs)ViewController(im)openMenu"></a>
+                  <a name="//apple_ref/swift/Method/openMenu()" class="dashAnchor"></a>
+                  <a class="token" href="#/c:@M@FlyveMDMAdminDashboard@objc(cs)ViewController(im)openMenu">openMenu()</a>
+                  </code>
+                </div>
+                <div class="height-container">
+                  <div class="pointer-container"></div>
+                  <section class="section">
+                    <div class="pointer"></div>
+                    <div class="abstract">
+                      <p>Undocumented</p>
+
+                    </div>
+                    <div class="declaration">
+                      <h4>Declaration</h4>
+                      <div class="language">
+                        <p class="aside-title">Swift</p>
+                        <pre class="highlight swift"><code><span class="kd">@objc</span>
+<span class="kd">func</span> <span class="nf">openMenu</span><span class="p">()</span></code></pre>
+
+                      </div>
+                    </div>
+                  </section>
+                </div>
+              </li>
+              <li class="item">
+                <div>
+                  <code>
                   <a name="/c:@M@FlyveMDMAdminDashboard@objc(cs)ViewController(im)didReceiveMemoryWarning"></a>
                   <a name="//apple_ref/swift/Method/didReceiveMemoryWarning()" class="dashAnchor"></a>
                   <a class="token" href="#/c:@M@FlyveMDMAdminDashboard@objc(cs)ViewController(im)didReceiveMemoryWarning">didReceiveMemoryWarning()</a>
